add toString to PlayerMove (very rough, because move notation is board dependant, we need move record. Also add getLegalMoves, which i (think?) works, but i need to check